--- a/co-olx/login.html
+++ b/co-olx/login.html
@@ -13,7 +13,7 @@
         <img id="background" src="image/greet1.png" alt="co-olx">
         <div class="login">
             <h1><img  width="60px" height="55px" src="SMLOGO.jpeg" alt="Co-oLX" style ="margin-right: 4px; " >  Login Form</h1>
-            <form method="" action="home.html">
+            <form method="" action="hm.html">
                 <div class="inputbox">
                     <input type="text" name="username" autocomplete="off" required>
                     <label >USERNAME</label>
