--- a/co-olx/hm.html
+++ b/co-olx/hm.html
@@ -28,7 +28,7 @@
 <body>
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#"><img height="50px" width="50px" src="SMLOGO.jpeg" alt="CO-oLX"></a>
+        <a class="navbar-brand" href="hm.html"><img height="50px" width="50px" src="SMLOGO.jpeg" alt="CO-oLX"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -37,7 +37,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="hm.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item dropdown">
                     <a style="color: rgb(8, 8, 8);" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -55,7 +55,7 @@
                     </div>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="about.html">About <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="feedback.html">Feedback <span class="sr-only">(current)</span></a>
@@ -74,8 +74,8 @@
                 <img width="40px" height="35px" src="image/profile_icon.png" alt="Account">
             </a>
             <div class="dropdown-menu" id="dropdown" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">View</a>
-                <a class="dropdown-item" href="#">Sell</a>
+                <a class="dropdown-item" href="account.html">View</a>
+                <a class="dropdown-item" href="upload.html">Sell</a>
                 <hr class="dropdown-divider" />
                 <a class="dropdown-item" href="#">Logout</a>
             </div>
@@ -297,12 +297,9 @@
                     <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
                         <!-- Content -->
                         <h6 class="text-uppercase fw-bold mb-4">
-                            <i class="fas fa-gem me-3"></i>National Institute of Technology, Trichy
+                            <i class="fas fa-gem me-3"></i>Co-oLX (College ka OLX)
                         </h6>
-                        <p>
-                            NIRF 2021 - First among NITs, Ninth in Engineering.... NIT-T appointed as the National MOOCs
-                            Coordinator for offering Engineering Courses at UG & PG level
-                        </p>
+                        <p>A portal for student of NITT where they can interact and sell/donate their stuff which are of no longer use to them.</p>
                     </div>
                     <!-- Grid column -->
 
@@ -343,7 +340,7 @@
                             <a href="#!" class="text-reset">Pricing</a>
                         </p>
                         <p>
-                            <a href="#!" class="text-reset">Settings</a>
+                            <a href="account.html" class="text-reset">Settings</a>
                         </p>
                         <p>
                             <a href="#!" class="text-reset">Orders</a>
