--- a/co-olx/feedback.html
+++ b/co-olx/feedback.html
@@ -5,14 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Co-oLX_Feedback</title>
-    <link rel="icon" type="image/png" href="image/small_logo.jpeg">
+    <link rel="icon" type="image/png" href="SMLOGO.jpeg">
     <link rel="stylesheet" href="feedback.css">
 </head>
 <body>
+    
+    <img id="back" src="image/greet1.png" alt="co-olx">
     <div class="container">
-        <img id="back" src="image/greet.jpeg" alt="co-olx">
+        
         <div class="box">
-            <h1>RATE YOUR EXPERIENCE</h1>
+            <h1>RATE</h1>
+            <h1>YOUR EXPERIENCE</h1>
             <div class="star">
                 <input type="radio" name="rate" id="rate-5" >
                 <label for="rate-5" class="fas fa-star"></label>
@@ -30,7 +33,7 @@
                 <label for="rate-1" class="fas fa-star"></label>
             </div>
             <br>
-            <p>Your Message :-</p>
+            <p>Your Feedback :-</p>
             <textarea name="comments" id="feed" cols="30" rows="10" placeholder="Type here..."></textarea>
             <div class="submit">
                 <input onclick="thanks()" id="feed_submission" type="submit" name="feed_submit" value="Submit" >
